--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </section>
     </main>
     <footer>
-        <p>Pie de página</p>
+        <p>Modifiqué footer desde copia-actualizada</p>
     </footer>
 </body>
 </html>
