--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        encabezado
+    </header>
+    <main>
+        <h1>titulo</h1>
+        <section>
+            sección
+        </section>
+    </main>
+    <footer>
+        pie de página
+    </footer>
 </body>
 </html>
