se añadió barra de navegación

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+
     <header>
         encabezado
+        <nav>
+            barra de navegación
+        </nav>
     </header>
     <main>
         <h1>titulo</h1>
@@ -19,5 +23,6 @@
     <footer>
         pie de página
     </footer>
+    
 </body>
 </html>
