--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <header>
         encabezado
         <nav>
-            barra de navegación
+            <ul>
+                <li>
+                    <a href="./index.html">Inicio</a>
+                </li>
+            </ul>
         </nav>
     </header>
     <main>
