--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <h1>titulo</h1>
         <section>
-            sección
+            sección :D
         </section>
     </main>
     <footer>
