corregí el footer

--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
         </section>
     </main>
     <footer>
-        pie de página
+        <form action="">
+            <label for="">nombre</label>
+            <input type="text">
+        </form>
+        <div>
+            <p>Todos los derechos reservados.</p>
+        </div>
     </footer>
     
 </body>
