Puse el h1 como logo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        encabezado
+        <h1>Logo</h1>
         <nav>
             <ul>
                 <li>
@@ -19,7 +19,6 @@
         </nav>
     </header>
     <main>
-        <h1>titulo</h1>
         <section>
             sección :D
         </section>
