mejoré la navbar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
 
     <header>
-        <h1>Logo</h1>
+        <div>
+            <img src="mejora.jpg" alt="">
+            <h1>Logo</h1>
+        </div>
         <nav>
             <ul>
                 <li>
